<resources>
    <string name="app_name">Doctor</string>

    <!-- First page -->

    <!-- common -->
    <string name="notice_exit">再按一次退出</string>

    <string name="home">首页</string>
    <string name="doc">医生</string>
    <string name="messger">消息</string>
    <string name="user">我的</string>
    <string name="no_wifi">网络未连接!</string>
    <string name="wifi_alert">服务器繁忙，请稍后重试!!</string>
    <string name="server_alert">服务器繁忙，请稍后重试！</string>
    <string name="dangan_luru">档案录入</string>
    <string name="chusheng_tizhong">出生体重：</string>
    <string name="chusheng_shenchang">出生身长：</string>
    <string name="chusheng_qiqi">出生日期：</string>
    <string name="chusheng_yiyuan">出生医院：</string>
    <string name="xiayibu">下一步</string>
    <string name="tizhong">5.0</string>
    <string name="kg">k g</string>
    <string name="text_yunzhou">孕         周：</string>
    <string name="text_cm">cm</string>
    <string name="text_xinsheng">新生儿及围产期</string>
    <string name="text_zhou">周</string>
    <string name="text_di">第</string>
    <string name="text_tai">胎</string>
    <string name="text_chan">产</string>
    <string name="text_shouyun">受孕情况：</string>
    <string name="text_ziran">    自然怀孕</string>
    <string name="text_rengong">人工受精</string>
    <string name="text_tiwai">体外助孕</string>
    <string name="text_zhuming">请注明</string>
    <string name="text_dantai">单胎</string>
    <string name="text_shuangtai">双胎  /  </string>
    <string name="text_chusheng">个出生</string>
    <string name="text_shunchan">顺产</string>
    <string name="text_paogongchan">刨宫产</string>
    <string name="text_nanchan">异常难产</string>
    <string name="text_yunqi">母亲孕期情况</string>
    <string name="text_liuchan">先兆流产：</string>
    <string name="text_wu">无</string>
    <string name="text_you">有</string>
    <string name="text_renshen">妊娠合并症：</string>
    <string name="text_ganren">急性感染：</string>
    <string name="text_yaowu">应用药物：</string>
    <string name="text_youhaiwu">接触有害物：</string>
    <string name="text_yunchan">异常孕产史：</string>
    <string name="text_jiatingshi">家庭史</string>
    <string name="text_yichuan">家族遗传史：</string>
    <string name="text_fuxin">父亲：</string>
    <string name="text_shengyu">生育年龄</string>
    <string name="text_wenhua">文化程度</string>
    <string name="text_cenghuanjibing">曾患疾病：</string>
</resources>
